--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -19,7 +19,7 @@
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
         </div>
         <div class="form-group mt-3 col-12">
-            <label class="form-label" for="alertEmail">{{'QUESTION.SIGFOX.DEVICETYPE.ALERTEMAIL' | translate}}</label>*
+            <label class="form-label" for="alertEmail">{{'QUESTION.SIGFOX.DEVICETYPE.ALERTEMAIL' | translate}}</label>
             <input type="text" class="form-control" id="alertEmail" name="alertEmail"
                 [placeholder]="'QUESTION.SIGFOX.DEVICETYPE.ALERTEMAIL-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="sigfoxDeviceType.alertEmail"
@@ -53,6 +53,6 @@
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-secondary"
             type="button">{{ 'ORGANISATION.FORM.CANCEL' | translate}}</button>
-        <button class="btn btn-primary ml-2" type="submit">{{ 'ORGANISATION.FORM.SAVE' | translate}}</button>
+        <button class="btn btn-primary ml-2" type="submit">{{ 'SIGFOX.PROFILES.SAVE' | translate}}</button>
     </div>
 </form>
