IOT-53 adjust maxlength devid, add deviceid to detail view

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-sigfox/iot-device-detail-sigfox.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-sigfox/iot-device-detail-sigfox.component.html
@@ -10,5 +10,8 @@
 <h4>{{ 'IOTDEVICE.SIGFOX.ENDPRODUCTCERTIFICATE' | translate }}</h4>
 <p class="mb-5">{{device.sigfoxSettings.endProductCertificate}}</p>
 
+<h4>{{ 'IOTDEVICE.SIGFOX.DEVICEID' | translate }}</h4>
+<p class="mb-5">{{device.sigfoxSettings.deviceId}}</p>
+
 <h4>{{ 'IOTDEVICE.SIGFOX.PROTOTYPE' | translate }}</h4>
 <p class="mb-5">{{device.sigfoxSettings.prototype ? 'true' : 'false' | translate}}</p>
