IOT-572 add readonly for edit gateway id

--- a/src/app/gateway/gateway-edit/gateway-edit.component.html
+++ b/src/app/gateway/gateway-edit/gateway-edit.component.html
@@ -30,6 +30,7 @@
         <input type="text" class="form-control" id="id" name="id"
           [placeholder]="'QUESTION-LORA-GATEWAY.GATEWAYID-PLACEHOLDER' | translate" maxlength="16" required
           [(ngModel)]="gateway.id"
+          [readonly]="editMode ? true : false"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('id'), 'is-valid' : formFailedSubmit && !errorFields.includes('id')}">
       </div>
   
