IOT-53 refactor errormessage handler to service, added ABP edit and detail

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-lorawan/iot-device-detail-lorawan.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-lorawan/iot-device-detail-lorawan.component.html
@@ -15,6 +15,10 @@
     <p class="mb-5">{{device.lorawanSettings?.activationType}}</p>
     <h4>{{ 'IOTDEVICE.LORA.APPLICATIONSESSIONKEY' | translate }}</h4>
     <p class="mb-5">{{device.lorawanSettings?.applicationSessionKey}}</p>
+    <h4>{{ 'IOTDEVICE.LORA.FCNTUP' | translate }}</h4>
+    <p class="mb-5">{{device.lorawanSettings?.fCntUp}}</p>
+    <h4>{{ 'IOTDEVICE.LORA.NFCNTDOWN' | translate }}</h4>
+    <p class="mb-5">{{device.lorawanSettings?.nFCntDown}}</p>
 </ng-container>
 <h4>{{ 'IOTDEVICE.LORA.SKIPFCNTCHECK' | translate }}</h4>
 <p class="mb-5">{{device.lorawanSettings?.skipFCntCheck}}</p>
