--- a/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
@@ -69,7 +69,7 @@
               {{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE-HELP-TEXT' | translate}}
             </a>
           </div>  
-          <div class="form-group mt-3 col-12">
+          <div class="form-group mt-3 col-12" *ngIf="!iotDevice.sigfoxSettings.endProductCertificate">
             <label class="form-label" for="endProductCertificate">{{'QUESTION.SIGFOX.PROTOTYPE-TITLE' | translate}}*</label>
             <div>
               <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" [disabled]="editMode" id="prototype" name="prototype">
