Frontend Batteri status

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-lorawan/iot-device-detail-lorawan.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-lorawan/iot-device-detail-lorawan.component.html
@@ -1,9 +1,17 @@
+<div class="row">
+    <div class="col-6">
+        <h4>{{ 'IOTDEVICE.LORA.SERVICEPROFILE' | translate }}</h4>
+        <p class="mb-5">{{serviceProfileName}}</p>
+
+    </div>
+    <div class="col-6">
+
+        <h4>{{ 'IOTDEVICE.LORA.DEVICEPROFILE' | translate }}</h4>
+        <p class="mb-5">{{deviceProfileName}}</p>
+    </div>
+</div>
 <h4>{{ 'IOTDEVICE.LORA.DEVEUI' | translate }}</h4>
 <p class="mb-5">{{device.lorawanSettings.devEUI}}</p>
-<h4>{{ 'IOTDEVICE.LORA.SERVICEPROFILE' | translate }}</h4>
-<p class="mb-5">{{serviceProfileName}}</p>
-<h4>{{ 'IOTDEVICE.LORA.DEVICEPROFILE' | translate }}</h4>
-<p class="mb-5">{{deviceProfileName}}</p>
 <ng-container *ngIf="OTAA">
     <h4>{{ 'IOTDEVICE.LORA.OTAAAPPLICATIONKEY' | translate }}</h4>
     <p class="mb-5">{{device.lorawanSettings?.OTAAapplicationKey}}</p>
