--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -1,8 +1,19 @@
-<h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
-<p class="mb-5">{{device.name}}</p>
+<div class="row">
+    <div class="col-4">
+        <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
+        <p class="mb-5">{{device.name}}</p>
+    </div>
+    <div class="col-4">
 
-<h4>{{ 'IOTDEVICE.TYPE' | translate }}</h4>
-<p class="mb-5">{{ 'IOT-DEVICE-TYPES.' + device.type | translate}}</p>
+        <h4>{{ 'IOTDEVICE.TYPE' | translate }}</h4>
+        <p class="mb-5">{{ 'IOT-DEVICE-TYPES.' + device.type | translate}}</p>
+    </div>
+    <div class="col-4">
+        <h4>{{ 'IOT-TABLE.BATTERY' | translate }}</h4>
+        <app-batteri-status *ngIf="device.type === 'LORAWAN'" [color]="batteryStatusColor"
+            [percentage]="batteryStatusPercentage"></app-batteri-status>
+    </div>
+</div>
 
 <h4>{{ 'IOTDEVICE.COMMENT' | translate }}</h4>
 <div *ngIf="device.comment; then thenBlock else elseBlock"></div>
