--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -27,4 +27,7 @@
     <h4 class="">
         {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
     </h4>
+    <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
+        (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
+    </app-applications-table>
 </div>
