IOT-614 add id on edit page service/device profile

--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -23,6 +23,14 @@
                     [(ngModel)]="deviceProfile.name">
             </div>
 
+            <div class="col-xs-12 form-group" *ngIf="deviceProfile.id">
+                <label for="id"
+                    class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.ID' | translate}}</label>
+                <input type="text" class="form-control" id="id" name="id"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.ID_PLACEHOLDER' | translate" maxlength="50" required disabled
+                    [ngModel]="deviceProfile.id">
+            </div>
+
             <div class="col-xs-12 form-group">
                 <label for="macVersion"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MACVERSION' | translate}}</label>
