--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -3,15 +3,39 @@
         <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
         <p class="mb-5">{{device.name}}</p>
     </div> -->
-    <div class="col-6">
+    <div class="col-md-4">
 
         <h4>{{ 'IOTDEVICE.TYPE' | translate }}</h4>
         <p class="mb-5">{{ 'IOT-DEVICE-TYPES.' + device.type | translate}}</p>
     </div>
-    <div class="col-6">
+    <div class="col-md-4">
         <h4>{{ 'IOT-TABLE.BATTERY' | translate }}</h4>
-        <app-batteri-status *ngIf="device.type === 'LORAWAN'" [color]="batteryStatusColor"
+        <app-batteri-status *ngIf="device.type === 'LORAWAN'; else noBatteryStatus" [color]="batteryStatusColor"
             [percentage]="batteryStatusPercentage"></app-batteri-status>
+        <ng-template #noBatteryStatus>
+            <div>
+                {{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}
+            </div>
+        </ng-template>
+
+    </div>
+    <div class="col-md-4 order-first order-md-last ">
+        <div class="btn-group float-md-right">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                {{'IOTDEVICE-TABLE-ROW.SHOW-OPTIONS' | translate}} <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="dropdown-item">
+                    <a [routerLink]="['../../iot-device-edit', this.device.id]">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
+                    </a>
+                </li>
+                <li class="dropdown-item">
+                    <a (click)="clickDelete()">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
