--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -1,11 +1,36 @@
 <app-top-bar-single [data]="gateway" [backButton]="backButton"></app-top-bar-single>
 <div class=" jumbotron m-md-4 p-md-3">
-    <h4>{{ 'GATEWAY.NAME' | translate }}</h4>
-    <p class="mb-5">{{gateway.name}}</p>
-    <h4 *ngIf="gateway.description">{{ 'GATEWAY.DESCRIPTION' | translate }}</h4>
+    <div class="row">
+        <div class="col-md-8">
+            <!-- <h4>{{ 'GATEWAY.NAME' | translate }}</h4>
+            <p class="mb-5">{{gateway.name}}</p> -->
+            <h4>{{ 'GATEWAY.ID' | translate }}</h4>
+            <p class="mb-5">{{gateway.id}}</p>
+
+        </div>
+
+        <div class="col-md-4 order-first order-md-last ">
+            <div class="btn-group float-md-right">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    {{'IOTDEVICE-TABLE-ROW.SHOW-OPTIONS' | translate}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">
+                        <a [routerLink]="['../../gateway-edit', this.gateway.id]">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
+                        </a>
+                    </li>
+                    <li class="dropdown-item">
+                        <a (click)="onDeleteGateway()">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <h4>{{ 'GATEWAY.DESCRIPTION' | translate }}</h4>
     <p class="mb-5">{{gateway.description}}</p>
-    <h4>{{ 'GATEWAY.ID' | translate }}</h4>
-    <p class="mb-5">{{gateway.id}}</p>
+
     <h4>{{ 'GATEWAY.LOCATION' | translate }}</h4>
     <div *ngIf="gateway.location; then locationThenBlock else locationElseBlock"></div>
     <ng-template #locationThenBlock>
@@ -29,6 +54,8 @@
     </ng-template>
     <h4>{{ 'GATEWAY.TAGS' | translate }}</h4>
     <p class="mb-5">{{gateway.tagsString}}</p>
+</div>
+<div class=" jumbotron m-md-4 p-md-3">
     <h4>{{ 'GATEWAY.STATS' | translate }}</h4>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource">
