--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -9,14 +9,14 @@
         </div>
       </div>
       <div class="col-md-4 order-first order-md-last ">
-        <div class="btn-group float-md-right">
+        <div class="btn-group float-md-right dropdown">
           <ul>
             <li>
-              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
+              <button type="button" id="dropdown-{{ application.name }}" class="btn btn-primary dropdown-toggle"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate}} <span class="caret"></span>
               </button>
-              <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{application.id}}">
+              <ul class="dropdown-menu" attr.aria-labelledby="dropdown-{{application.name}}">
                 <li class="dropdown-item">
                   <a (click)="onEditApplication()">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
                   </a>
