--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,7 @@
 @import 'assets/scss/setup/variables';
 @import 'assets/scss/setup/material-theme';
 
+@import "~leaflet/dist/leaflet.css";
 
 
 @font-face {
