--- a/src/app/gateway/gateway-edit/gateway-edit.component.html
+++ b/src/app/gateway/gateway-edit/gateway-edit.component.html
@@ -33,6 +33,14 @@
           [readonly]="editMode ? true : false"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('id'), 'is-valid' : formFailedSubmit && !errorFields.includes('id')}">
       </div>
+
+      <div class="row">
+        <app-map 
+          [longitude]="gateway.location.longitude" 
+          [latitude]="gateway.location.latitude" 
+          [draggable]="true"
+          (updateCoordinates)="updateCoordinates($event)"></app-map>
+      </div>
   
       <div class="row mb-5">
         <div class="form-group mt-3 col-6">
