--- a/src/app/map/map/map.component.html
+++ b/src/app/map/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="map-container">
     <div class="map-frame">
-      <div id="map" (click)="onClick($event)"></div>
+      <div id="map"></div>
     </div>
 </div>
