IOT-569 - add geolocation

--- a/src/app/gateway/gateway-edit/gateway-edit.component.html
+++ b/src/app/gateway/gateway-edit/gateway-edit.component.html
@@ -39,6 +39,7 @@
           [longitude]="gateway.location.longitude" 
           [latitude]="gateway.location.latitude" 
           [draggable]="true"
+          [useGeolocation]="!editMode"
           (updateCoordinates)="updateCoordinates($event)"></app-map>
       </div>
   
