--- a/src/app/admin/users/user-detail/user-detail.component.html
+++ b/src/app/admin/users/user-detail/user-detail.component.html
@@ -47,7 +47,7 @@
 
 <div class="jumbotron m-md-4 p-md-3">
     <h4 class="">
-        {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
+        {{ 'USERS.DETAIL.APPLICATIONS' | translate }}
     </h4>
     <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
         (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
