--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -31,3 +31,11 @@
         (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
     </app-applications-table>
 </div>
+
+<div class="jumbotron m-md-4 p-md-3">
+    <h4 class="">
+        {{ 'ORGANISATION.DETAIL.PERMISSIONS' | translate }}
+    </h4>
+    <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)">
+    </app-permission-tabel>
+</div>
