IOT-569 PR fixes

--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -11,15 +11,15 @@
     <ng-template #locationThenBlock>
         <div class="row">
             <div class="mb-5 col-2">
-                <div class="row col-md-12">
+                <div>
                     <h6>{{ 'GATEWAY.LONGITUDE' | translate }}</h6>
                     <p>{{gateway.location?.longitude}}</p>
                 </div>
-                <div class="row col-md-12">
+                <div>
                     <h6>{{ 'GATEWAY.LATITUDE' | translate }}</h6>
                     <p>{{gateway.location.latitude}}</p>
                 </div>
-                <div class="row col-md-12">
+                <div>
                     <h6>{{ 'GATEWAY.ALTITUDE' | translate }}</h6>
                     <p>{{gateway.location.altitude}}</p>
                 </div>
