--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -72,6 +72,10 @@
           [(ngModel)]="iotDevice.comment"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('comment'), 'is-valid' : formFailedSubmit && !errorFields.includes('comment')}">
       </div>
+
+      <div class="form-group mt-3 col-12" *ngIf="iotDevice">
+        <app-map [coordinates]="getCoordinates()" (updateCoordinates)="updateCoordinates($event)"></app-map>
+      </div>
   
       <div class="form-group mt-3 col-6">
         <label class="form-label" for="longitude">{{'IOTDEVICE.LONGITUDE' | translate}}</label>
