--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -1,91 +1,81 @@
+<app-loading-spinner *ngIf=" isLoadingResults">
+</app-loading-spinner>
 <div class="mat-elevation-z8">
-  <div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-    <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-      GitHub's API rate limit has been reached. It will be reset in one minute.
-    </div>
-  </div>
+  <table mat-table [dataSource]="dataSource" matSort>
 
-  <div class="example-table-container">
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matSortActive="name" matSortDisableClear>
+        {{ 'APPLICATION-TABLE.NAME' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="['iot-device', element.id]" routerLinkActive="active" class="device-link">{{element.name}}</a>
+      </td>
+    </ng-container>
 
-    <table mat-table [dataSource]="dataSource" matSort>
+    <!-- Technology Column -->
+    <ng-container matColumnDef="technology">
+      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{"IOT-DEVICE-TYPES." + element.type | translate}}</td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header matSortActive="name" matSortDisableClear>
-          {{ 'APPLICATION-TABLE.NAME' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <a [routerLink]="['iot-device', element.id]" routerLinkActive="active"
-            class="device-link">{{element.name}}</a>
-        </td>
-      </ng-container>
+    <!-- Alarm Column -->
+    <ng-container matColumnDef="alarm">
+      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.ALARM' | translate }}</th>
+      <td mat-cell *matCellDef="let element">
+        N/A
+      </td>
+    </ng-container>
 
-      <!-- Technology Column -->
-      <ng-container matColumnDef="technology">
-        <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
-        <td mat-cell *matCellDef="let element">{{"IOT-DEVICE-TYPES." + element.type | translate}}</td>
-      </ng-container>
-
-      <!-- Alarm Column -->
-      <ng-container matColumnDef="alarm">
-        <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.ALARM' | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          N/A
-        </td>
-      </ng-container>
-
-      <!-- Battery Column -->
-      <ng-container matColumnDef="battery">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-          {{ 'IOT-TABLE.BATTERY' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <div *ngIf="element.type === 'LORAWAN'; else noBatteryStatus">
-            <app-batteri-status [color]="batteryStatusColor" [percentage]="batteryStatusPercentage">
-            </app-batteri-status>
+    <!-- Battery Column -->
+    <ng-container matColumnDef="battery">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+        {{ 'IOT-TABLE.BATTERY' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.type === 'LORAWAN'; else noBatteryStatus">
+          <app-batteri-status [color]="batteryStatusColor" [percentage]="batteryStatusPercentage">
+          </app-batteri-status>
+        </div>
+        <ng-template #noBatteryStatus>
+          <div>
+            {{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}
           </div>
-          <ng-template #noBatteryStatus>
-            <div>
-              {{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}
-            </div>
-          </ng-template>
-        </td>
-      </ng-container>
+        </ng-template>
+      </td>
+    </ng-container>
 
-      <!-- Active Column -->
-      <ng-container matColumnDef="active">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-          {{ 'IOT-TABLE.ACTIVE' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">{{lastActive()}}</td>
-      </ng-container>
+    <!-- Active Column -->
+    <ng-container matColumnDef="active">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
+        {{ 'IOT-TABLE.ACTIVE' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">{{lastActive()}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="menu">
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let element">
-          <div class="dropdown ">
-            <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
-              data-toggle="dropdown" aria-expanded="false"
-              [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-            <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-              <li class="dropdown-item">
-                <a [routerLink]="['iot-device-edit', element.id]"
-                  routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a (click)="clickDelete()" [routerLink]="">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
-              </li>
-            </ul>
-          </div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="menu">
+      <th mat-header-cell *matHeaderCellDef>#</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="dropdown ">
+          <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
+            data-toggle="dropdown" aria-expanded="false"
+            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+          <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+            <li class="dropdown-item">
+              <a [routerLink]="['iot-device-edit', element.id]"
+                routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
+              </a>
+            </li>
+            <li class="dropdown-item">
+              <a (click)="clickDelete()" [routerLink]="">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
+            </li>
+          </ul>
+        </div>
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength" showFirstLastButtons></mat-paginator>
-  </div>
-
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength" showFirstLastButtons></mat-paginator>
 </div>
