--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -51,7 +51,7 @@
     <div class="col-md-6 offset-md-3 mb-5 d-flex justify-content-center">
         <button (click)="addIoTDevice()" class="btn btn-primary"> Overfør data</button>
     </div>
-    <div class="col-md-6 offset-md-3 mb-5">
+    <div class="col-md-6 mb-5">
         <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
     </div>
 
