--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -33,7 +33,7 @@
 
         <!-- Last seen Column -->
         <ng-container matColumnDef="last-seen">
-            <th mat-header-cell *matHeaderCellDef>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
                 {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
@@ -43,7 +43,7 @@
 
         <!-- Status Column -->
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
                 {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
