--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -15,3 +15,18 @@
         </tbody>
     </table>
 </div>
+<nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
+    <ul class="pagination justify-content-center mt-5">
+        <li class="page-item">
+            <a class="page-link" [routerLink]="" (click)="gotoPrevPage()">Previous</a>
+        </li>
+        <li class="page-item disabled">
+            <div class="page-link" [routerLink]="">
+                {{ pageOffset + 1 }} / {{ pageTotal }}
+            </div>
+        </li>
+        <li class="page-item">
+            <a class="page-link" [routerLink]="" (click)="gotoNextPage()">Next</a>
+        </li>
+    </ul>
+</nav>
