--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,9 @@
 <app-top-bar [title]="'NAV.SEARCH' | translate" [searchQuery]="query"></app-top-bar>
-
+<div class="mx-md-4 px-md-3">
+    <h3>{{'SEARCH.QUERY' | translate}} {{decode(query)}}</h3>
+</div>
 <div class="m-md-4 p-md-3">
-    <app-search-table [searchResults]="searchResults", [searchResultsCount]="searchResultsCount"></app-search-table>
+    <app-search-table [searchResults]="searchResults" [pageTotal]="pageTotal" [pageOffset]="pageOffset"
+        (prevPage)="prevPage()" (nextPage)="nextPage()">
+    </app-search-table>
 </div>
