Refactor payload decoder

--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -59,7 +59,7 @@
 
         <!-- Menu Column -->
         <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef>#</th>
+            <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <div class="dropdown">
                     <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
