--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -3,5 +3,5 @@
     (selectedSortChange)="changeSort($event)"></app-top-bar>
 
 <div class="m-md-4 p-md-3">
-    <app-user-table></app-user-table>
+    <app-user-table [users]="users"></app-user-table>
 </div>
